--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-streamlit==1.28.0 
+streamlit==1.28
+.physics==1.26.0 
 pandas==2.1.4 
 matplotlib==3.8.0 
 fpdf2==2.7.5 
 numpy==1.26.0 
-xlsxwriter==3.1.2
+xlsxwriter==3.1.2 
+seaborn==0.13.0 
+Pillow==10.0.0
