--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-streamlit==1.28
-.physics==1.26.0 
-pandas==2.1.4 
-matplotlib==3.8.0 
-fpdf2==2.7.5 
-numpy==1.26.0 
-xlsxwriter==3.1.2 
-seaborn==0.13.0 
-Pillow==10.0.0
+streamlit>=1.38.0 
+pandas>=2.2.2 
+matplotlib>=3.9.2 
+fpdf>=1.7.2 
+numpy>=2.1.1 
+seaborn>=0.13.2
