--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit>=1.38.0 
 pandas>=2.2.2 
-matplotlib>=3.9.2 
-fpdf>=1.7.2 
+plotly>=5.24.1 
+fpdf2>=2.7.9 
 numpy>=2.1.1 
 seaborn>=0.13.2
