--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-streamlit>=1.38.0 
-pandas>=2.2.2 
-plotly>=5.24.1 
-fpdf2>=2.7.9 
-numpy>=2.1.1 
-seaborn>=0.13.2
+streamlit==1.38.0 
+pandas==2.2.2 
+plotly==5.22.0 
+numpy==1.26.4 
+seaborn==0.13.2
