--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-streamlit>=1.38.0
-pandas>=2.2.2
+streamlit==1.45.0 
+pandas>=2.2.3
 plotly>=5.24.1
 reportlab>=4.2.2
+matplotlib==3.9.2 
+seaborn==0.13.2 
+xlsxwriter==3.2.0
